// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Snapshpts should match snapshot with all sizes 1`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c1 {
  width: 100%;
  height: 40px;
  font-size: 14px;
  padding: 0px 1em 0px 2.65em;
  border-radius: 5px;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 0.875rm;
  padding: 4px 12px 4px 12px;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshpts should match snapshot with all sizes 2`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c1 {
  width: 100%;
  height: 40px;
  font-size: 14px;
  padding: 0px 1em 0px 2.65em;
  border-radius: 5px;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 1rm;
  padding: 8px 16px 8px 16px;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshpts should match snapshot with all sizes 3`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c1 {
  width: 100%;
  height: 40px;
  font-size: 14px;
  padding: 0px 1em 0px 2.65em;
  border-radius: 5px;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 1.275rm;
  padding: 12px 20px 12px 20px;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshpts should match snapshot with all skins 1`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c1 {
  width: 100%;
  height: 40px;
  font-size: 14px;
  padding: 0px 1em 0px 2.65em;
  border-radius: 5px;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 0.875rm;
  padding: 4px 12px 4px 12px;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshpts should match snapshot with all skins 2`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c1 {
  width: 100%;
  height: 40px;
  font-size: 14px;
  padding: 0px 1em 0px 2.65em;
  border-radius: 5px;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 0.875rm;
  padding: 4px 12px 4px 12px;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshpts should match snapshot with all skins 3`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c1 {
  width: 100%;
  height: 40px;
  font-size: 14px;
  padding: 0px 1em 0px 2.65em;
  border-radius: 5px;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 0.875rm;
  padding: 4px 12px 4px 12px;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshpts should match snapshot with input disabled 1`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c1 {
  width: 100%;
  height: 40px;
  font-size: 14px;
  padding: 0px 1em 0px 2.65em;
  border-radius: 5px;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 0.875rm;
  padding: 4px 12px 4px 12px;
  background-color: undefined;
  color: #a8a8a8;
  cursor: not-allowed;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      disabled=""
      type="text"
    />
  </div>
</div>
`;
